# summaru

./: .env.sample  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  block_kit.py  bot.py  config.py  config.yaml  docker-compose.yml  help.py  manifest.yml  prompt.yaml  pyproject.toml  summaru_gpt.py  summaru_index.py  workflow.py
.github/workflows/: docker-build.yml  docker-push.yml  pytest.yml
components/: button.json  menu.json
libexec/: indexing.py  post.py  replies.py
prompts/: testuser.yaml
tests/: test_bot.py
