[tool.poetry]
name = "summaru"
version = "0.1.0"
description = ""
authors = ["伊藤 洋也 <hiroyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
slack-bolt = "^1.16.4"
pyyaml = "^6.0"
llama-index = "^0.4.40"
pytest = "^7.2.2"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]
jurigged = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
